# sudoku-solver

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  load_env.ps1  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
src/sudoku_solver/: __init__.py  cell.py  cli.py  downloader.py  evaluator.py  loader.py  main.py  puzzle.py  renderer.py  tui.py
src/sudoku_solver/puzzles/: __init__.py  chaossudoku_3.py  chaossudoku_4.py  loader.py  sudoku_1_summit.py  sudoku_7.py
src/sudoku_solver/strategies/: __init__.py  elimination.py  hidden.py  intersection.py  naked.py  pinned.py  rectangle_elimination.py  swordfish.py  xwing.py  xy_chain.py
tests/: test_puzzles.py
tests/unit/: test_cell.py  test_puzzle.py
tests/unit/strategies/: test_elimination_column.py  test_elimination_group.py  test_elimination_row.py  test_hidden_pair.py  test_hidden_single.py  test_hidden_subsets.py  test_intersection.py  test_naked_pairs.py  test_naked_quads.py  test_naked_subsets.py  test_naked_triples.py  test_pinned.py  test_rectangle_elim.py  test_swordfish.py  test_xwing.py  test_xy_chain.py
